--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,6 +7,7 @@
     "stylelint-order"
   ],
   "rules": {
+    "selector-class-pattern": null,
     "at-rule-empty-line-before": null,
     "at-rule-name-space-after": "always",
     "at-rule-no-unknown": null,
